<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.fernandocchaves.appdemo.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="156dp">

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordTxt"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/passwordTxt"
            android:layout_marginTop="23dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_below="@+id/nameTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="91dp" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:text="Save"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="168dp"
            android:layout_below="@+id/passwordTxt"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
