<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.fernandocchaves.appdemo.ShowTextActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="156dp">

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TextView"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="69dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
